# RealWorldOpenEnv

./: .gitignore  Dockerfile  README.md  app.py  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
customer_support_env/: __init__.py  environment.py  graders.py  models.py  tasks.py  tickets.py
server/: app.py
